--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@lekoarts/gatsby-theme-minimal-blog": "^6.0.0",
     "gatsby": "^5.0.0",
     "gatsby-plugin-feed": "^5.0.0",
+    "gatsby-plugin-image": "^3.2.0",
     "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-sharp": "^5.2.0",
     "gatsby-plugin-sitemap": "^6.0.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.30",
+    "gatsby-source-filesystem": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
