--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 18
 
       - name: Install Ndoe dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Install Gatsby CLI
         run: npm install -g gatsby-cli@5.2.0
