--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     name: Publish to Cloudflare Pages
+    environment: Production
     steps:
       - name: Checkout
         uses: actions/checkout@v3
