--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Publish to Cloudflare Pages
     environment: Production
+    permissions:
+      contents: read
+      deployments: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -17,7 +20,7 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install Ndoe dependencies
+      - name: Install Node dependencies
         run: yarn install --frozen-lockfile
 
       - name: Install Gatsby CLI
@@ -36,3 +39,4 @@ jobs:
           accountId: e51a6216f6fc6cef01864e14fe47b1dc
           projectName: keppnisforritun-is
           directory: public
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
