--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lekoarts/gatsby-theme-minimal-blog": "^6.0.0",
     "gatsby": "^5.0.0",
     "gatsby-plugin-feed": "^5.0.0",
+    "gatsby-plugin-google-gtag": "^5.2.0",
     "gatsby-plugin-image": "^3.2.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-sharp": "^5.2.0",
